# tutorials-rock_tutorial

./: CMakeLists.txt  manifest.xml
resources/: rock.osg
scripts/: ruby.vizkit.tutorial.rb
src/: BearingDistanceSensor.hpp  BearingHeadingSensor.hpp  CMakeLists.txt  RockControl.cpp  RockControl.hpp  RockVisualization.cpp  RockVisualization.hpp
viz/: CMakeLists.txt  RockVisualization.cpp  RockVisualization.hpp  vizkit_plugin.rb
